Fix layout issues at WhereYouLive menu and clean code

--- a/src/components/atoms/_button.scss
+++ b/src/components/atoms/_button.scss
@@ -20,7 +20,7 @@
   display: block;
   text-align: center;
   min-width: 16rem;
-  margin: 0 2.5rem;
+  margin: 1rem 2.5rem;
   padding: 1em 1.7em;
   border-radius: 25px;
   background-color: $colorBrand2;
