--- a/src/components/atoms/_title.scss
+++ b/src/components/atoms/_title.scss
@@ -9,6 +9,7 @@
   }
   &--secondary {
     font-size: 2em;
+    padding-bottom: 0.5em;
   }
   &--primaryMenu {
     text-transform: uppercase;
