--- a/src/components/pages/_age.scss
+++ b/src/components/pages/_age.scss
@@ -41,6 +41,10 @@ span {
   }
 }
 
+.content {
+  overflow-y: scroll;
+}
+
 .ageSection {
   display: grid;
   grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
