--- a/src/components/pages/_whereYouLive.scss
+++ b/src/components/pages/_whereYouLive.scss
@@ -1,5 +1,12 @@
 @use "../../styles/settings/variables";
 
+.content {
+  overflow-y: scroll;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-around;
+}
+
 .whereYouLiveHeader {
   display: flex;
   justify-content: center;
@@ -11,8 +18,9 @@
   display: flex;
   flex-direction: column;
   align-items: center;
-  justify-content: space-evenly;
+  justify-content: flex-end;
   margin: 2rem 0 2rem 0;
   text-align: center;
   color: variables.$colorWhite;
+  flex-grow: 0.5;
 }
